Add working bitcoinRpc example. Update packages, update readme to match v2 api, remove request.js dependency, update jsdoc comments

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "json-payment-protocol",
-  "version": "0.2.0",
+  "version": "2.0.0",
   "description": "Simple interface for retrieving JSON payment requests and submitting payments",
   "main": "index.js",
   "dependencies": {
-    "lodash": "^4.17.4",
-    "request": "^2.83.0",
     "secp256k1": "^3.5.0"
   },
   "devDependencies": {
-    "async": "^2.6.0",
-    "bs58": "^4.0.1",
-    "kbpgp": "^2.0.77",
-    "promptly": "^2.2.0",
-    "request-promise": "^4.2.2"
+    "async": "2.6.0",
+    "bs58": "4.0.1",
+    "eslint": "6.2.1",
+    "kbpgp": "2.0.77",
+    "promptly": "2.2.0",
+    "request": "^2.83.0",
+    "request-promise": "4.2.2"
   },
   "engines": {
     "node": ">=8.0.0"
